#33 TopAppBar on small screens fix

--- a/src/app/components/top-bar/top-bar.scss
+++ b/src/app/components/top-bar/top-bar.scss
@@ -23,12 +23,16 @@
     }
     .title {
         width: 100%;
-        text-align: left;
         color: grey;
+        padding-left: 0px;
     }
 
     .center {
         text-align: center;
+    }
+
+    .middle-padding {
+        padding-right: 56px;
     }
 
     .grey {
